Regression: Light object's parametric vector distorted in blender 3.4 #100119

Closed
opened 2022-08-01 14:18:27 +02:00 by baoyu · 7 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-07-31 21:46, hash: ca172677b1
Worked: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-05 19:05, hash: 8589f60546

Short description of error
The parametric vector coordinate fail to work when used as a input vector to light textures of a Light object node group.

The 3.4 version abnormal effect.
image.png

The expected effect that works in 3.3 version
image.png

Try downloading the blend file to reproduce.
light object's parametric vector BUG.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-07-31 21:46, hash: `ca172677b1` Worked: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-05 19:05, hash: `8589f60546` **Short description of error** The parametric vector coordinate fail to work when used as a input vector to light textures of a Light object node group. > The 3.4 version abnormal effect. > ![image.png](https://archive.blender.org/developer/F13329294/image.png) > The expected effect that works in 3.3 version >![image.png](https://archive.blender.org/developer/F13329301/image.png) Try downloading the blend file to reproduce. [light object's parametric vector BUG.blend](https://archive.blender.org/developer/F13329304/light_object_s_parametric_vector_BUG.blend)
Author

Added subscriber: @baoyu

Added subscriber: @baoyu
Omar Emara changed title from Light object's parametric vector BUG in blender 3.4 to Light object's parametric vector distorted in blender 3.4 2022-08-01 15:15:30 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Omar Emara changed title from Light object's parametric vector distorted in blender 3.4 to Regression: Light object's parametric vector distorted in blender 3.4 2022-08-01 15:16:30 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Caused by 38af5b0501.

Caused by 38af5b0501.

This issue was referenced by cefd6140f3

This issue was referenced by cefd6140f322250d630f4d845fe5bdb013c00ddc

This issue was referenced by 25a0124bc8

This issue was referenced by 25a0124bc890a3390ef7738707f218f50a8d8ac3
Sergey Sharybin self-assigned this 2022-08-01 16:29:54 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100119
No description provided.