Fix T100119: Light object's parametric vector distorted in blender 3.4

Caused by 38af5b050100.

Adjust barycentric coordinates used for intersection result in the
ray-to-rectangle intersection check.

Differential Revision: https://developer.blender.org/D15592